P2T Webservice Fehler abgefangen + Texte und Fehler hinzugefügt

--- a/WoPeD-GUI/src/org/woped/gui/translations/Messages.properties
+++ b/WoPeD-GUI/src/org/woped/gui/translations/Messages.properties
@@ -2374,6 +2374,9 @@ Paraphrasing.Webservice.Success.Message							= %1 webservice successfully conta
 Paraphrasing.Webservice.Error.Title								= Error
 Paraphrasing.Webservice.Error.Exception.Message					= Errors occurred while contacting %1 webservice at URL\n%0 
 Paraphrasing.Webservice.Error.Webserviceexception.Message		= Could not contact %1 webservice at URL\n%0
+Paraphrasing.Webservice.Error.TryAgain                          = Webservice error. Please try again.
+Paraphrasing.Webservice.Error.Contact                           = Webservice could not be contacted.
+Paraphrasing.Webservice.Settings                                = Check your setting under "Options & Help" -> "Settings" -> "NLP Tools"
 Paraphrasing.Webservice.Numberelements.Message					= There are too little elements in your graph!
 Paraphrasing.Webservice.Parsing.Empty.Title						= Result
 Paraphrasing.Webservice.Parsing.Empty.Message					= Result contains no description
